WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
80738
RenderObject with 'resize' different from 'none' should have a RenderLayer
https://bugs.webkit.org/show_bug.cgi?id=80738
Summary
RenderObject with 'resize' different from 'none' should have a RenderLayer
Julien Chaffraix
Reported
2012-03-09 17:15:20 PST
Currently the resizer logic needs to hang from a RenderLayer. Moving this logic out of RenderLayer would need a pretty involved refactoring so let's re-add a layer in this case. This is a regression from
http://trac.webkit.org/changeset/110072
. It is also making fast/css/resize-single-axis.html failing on most platforms (masked by the massive skip).
Attachments
Re-add a RenderLayer in this case.
(6.16 KB, patch)
2012-03-09 17:18 PST
,
Julien Chaffraix
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Julien Chaffraix
Comment 1
2012-03-09 17:18:46 PST
Created
attachment 131138
[details]
Re-add a RenderLayer in this case.
WebKit Review Bot
Comment 2
2012-03-10 10:22:12 PST
Comment on
attachment 131138
[details]
Re-add a RenderLayer in this case. Clearing flags on attachment: 131138 Committed
r110380
: <
http://trac.webkit.org/changeset/110380
>
WebKit Review Bot
Comment 3
2012-03-10 10:22:16 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug