RenderObject with 'resize' different from 'none' should have a RenderLayer https://bugs.webkit.org/show_bug.cgi?id=80738

Reviewed by James Robinson.

Source/WebCore:

Covered by fast/css/resize-single-axis.html.

* rendering/RenderBox.h:
(WebCore::RenderBox::requiresLayerForOverflowClip):
The resizer logic is tied to RenderLayer so force a RenderLayer to be allocated if resize() != RESIZE_NONE.

LayoutTests:

* platform/chromium/test_expectations.txt:
* platform/efl/test_expectations.txt:
* platform/gtk/test_expectations.txt:
* platform/mac/test_expectations.txt:
* platform/win/Skipped:
Unskip the test on most platform but Qt. Qt has a bug about the test timing out
which may be related.


Canonical link: https://commits.webkit.org/97971@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110380 268f45cc-cd09-0410-ab3c-d52691b4dbfc